tests/typing/fail/assign_to_function.crs
fn main() {
    test = other;
}

fn test() {
}

fn other() {
}